iOS Safari: Try fix scroll flickering

--- a/src/components/UI/UIPage.css
+++ b/src/components/UI/UIPage.css
@@ -2,7 +2,7 @@
   height: 100%;
   width: 100%;
   position: absolute;
-  overflow-y: auto;
+  overflow-y: scroll;
   top: 0;
   left: 0;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
